updated css as per figma

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="right-section">
             <img src="assets/images/Notification Bell.png" alt="Notifications" class="bell-icon">
             <img src="assets/images/Account.png" alt="User Image" class="user-icon">
+            <div class="user-info">
+                <span class="user-name">Marla Collins</span>
+                <span class="user-designation">Project Manager</span>
+            </div>
         </div>
     </div>
     <div class="main-wrapper">
@@ -46,15 +50,15 @@
 
         <div class="main-content">
             <div class="dashboard-header">
-                <h1>Welcome, Marla!</h1>
+                <h1>WELCOME, MARLA!</h1>
 
                 <img src="assets/images/WP_people in modern office 1.png" alt="Header Image" class="header-image">
             </div>
-            <div class="btn-container">
+            <!-- <div class="btn-container">
                 <button class="btn-1">Change Dashboard Preference <img src="assets/images/Group (1).png"
                         alt="dashboard Icon" class="btn-image"></button>
 
-            </div>
+            </div> -->
 
 
             <div class="grid-container">
