--- a/index.html
+++ b/index.html
@@ -24,29 +24,35 @@
     </div>
     <div class="main-wrapper">
         <div class="sidebar">
-
             <a href="#">
-                <img src="assets/images/Frame 642.png" alt="Dashboard Icon"> Dashboard
+              <img src="assets/images/Frame 642.png" alt="Dashboard Icon">
+              <span>Dashboard</span>
             </a>
             <a href="#">
-                <img src="assets/images/Frame 642 (1).png" alt="Desk Booking Icon"> Desk Booking
+              <img src="assets/images/Frame 642 (1).png" alt="Desk Booking Icon">
+              <span>Desk Booking</span>
             </a>
             <a href="#">
-                <img src="assets/images/Group (1).png" alt="Room Booking Icon"> Room Booking
+              <img src="assets/images/Group (1).png" alt="Room Booking Icon">
+              <span>Room Booking</span>
             </a>
             <a href="#">
-                <img src="assets/images/Group (1).png" alt="Visitor Registration Icon"> Visitor Registration
+              <img src="assets/images/Group (1).png" alt="Visitor Registration Icon">
+              <span>Visitor Registration</span>
             </a>
             <a href="#">
-                <img src="assets/images/Group (1).png" alt="Mail Services Icon"> Mail Services
+              <img src="assets/images/Group (1).png" alt="Mail Services Icon">
+              <span>Mail Services</span>
             </a>
             <a href="#">
-                <img src="assets/images/Group (1).png" alt="Service Request Icon"> Service Request
+              <img src="assets/images/Group (1).png" alt="Service Request Icon">
+              <span>Service Request</span>
             </a>
             <a href="#">
-                <img src="assets/images/Group (1).png" alt="Coffee Order Icon"> Coffee Order
+              <img src="assets/images/Group (1).png" alt="Coffee Order Icon">
+              <span>Coffee Order</span>
             </a>
-        </div>
+          </div>
 
         <div class="main-content">
             <div class="dashboard-header">
